[package]
name = "dyn_partial_eq_derive"
version = "0.1.2"
authors = ["Aaron Friel <mayreply@aaronfriel.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation of dyn_partial_eq"
repository = "https://github.com/AaronFriel/dyn_partial_eq"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version="^1.0.72", features=["full"]}
quote = "^1.0.9"
